--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
+    <color name="colorPrimary">#e42312</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
     <color name="white">#ffffff</color>
+    <color name="bg_color">#f0eff4</color>
+
+    <color name="line_color">#d0d0d0</color>
+    <color name="gray2">#919191</color>
+    <color name="font_dark_gray">#333333</color>
+    <color name="gray_transparent">#7000</color>
 </resources>
