--- a/app/src/main/res/layout/layout_loading.xml
+++ b/app/src/main/res/layout/layout_loading.xml
@@ -1,19 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:id="@+id/dialog_toast_bg"
-              android:layout_width="120dp"
-              android:layout_height="120dp"
-              android:background="@drawable/dialog_loading_bg"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@android:color/transparent"
               android:gravity="center"
               android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/progressBar1"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:indeterminateBehavior="repeat"
-        android:indeterminateDrawable="@drawable/loading_progress_anim"
-        android:indeterminateOnly="true" />
+    <ImageView
+        android:id="@+id/img_show"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:src="@mipmap/loading_anim_img_00"/>
 
     <TextView
         android:id="@+id/txt"
@@ -22,7 +20,7 @@
         android:layout_marginTop="8dp"
         android:ems="15"
         android:gravity="center"
-        android:textColor="@color/white"
-        android:visibility="visible" />
+        android:textColor="@color/text_color_66"
+        android:visibility="visible"/>
 
 </LinearLayout>
