--- a/app/src/main/res/layout/item_edit_over_view.xml
+++ b/app/src/main/res/layout/item_edit_over_view.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content">
 
         <ImageView
-            android:src="@mipmap/default_book"
+            android:src="@mipmap/defalut_img"
             android:id="@+id/image_hot"
             android:layout_width="170dp"
             android:layout_height="105dp"
