--- a/app/src/main/res/layout/item_tv_movie.xml
+++ b/app/src/main/res/layout/item_tv_movie.xml
@@ -1,24 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:id="@+id/ly_hot"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:padding="5dp">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/ly_hot"
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical"
+              android:padding="5dp">
 
     <FrameLayout
-        android:visibility="visible"
         android:id="@+id/frame_layout"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="visible">
 
         <ImageView
-            android:src="@mipmap/default_book"
             android:id="@+id/image_hot"
-            android:layout_width="170dp"
-            android:layout_height="105dp"
+            android:layout_width="105dp"
+            android:layout_height="135dp"
+            android:layout_gravity="center"
             android:scaleType="fitXY"/>
-
         <TextView
             android:textStyle="bold"
             android:id="@+id/tv_page"
@@ -35,8 +34,7 @@
         android:id="@+id/txt_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/frame_layout"
-        android:layout_centerInParent="true"
+        android:layout_gravity="center"
         android:layout_marginTop="4dp"
         android:ellipsize="middle"
         android:lines="1"
@@ -48,11 +46,9 @@
         android:id="@+id/txt_desc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/txt_name"
-        android:layout_centerInParent="true"
         android:layout_gravity="center"
         android:ellipsize="middle"
         android:lines="1"
         android:textColor="@color/gray2"
         android:textSize="12sp"/>
-</RelativeLayout>
+</LinearLayout>
