--- a/app/src/main/res/layout/item_tv_movie.xml
+++ b/app/src/main/res/layout/item_tv_movie.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
               android:id="@+id/ly_hot"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
@@ -28,6 +29,12 @@
             android:layout_marginRight="5dp"
             android:textColor="@color/white"
             android:textSize="11sp"/>
+        <star.liuwen.com.le_shi.View.CornerLabelView
+            android:id="@+id/label"
+            style="@style/CornerLabelView.Default"
+            android:visibility="gone"
+            app:clvFillColor="@android:color/holo_orange_light"
+            app:clvText1=""/>
     </FrameLayout>
 
     <TextView
