--- a/app/src/main/res/layout/fragment_zi_xun.xml
+++ b/app/src/main/res/layout/fragment_zi_xun.xml
@@ -4,4 +4,10 @@
               android:layout_height="wrap_content"
               android:orientation="vertical">
 
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/zi_xun_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </android.support.v7.widget.RecyclerView>
 </LinearLayout>
