--- a/app/src/main/res/layout/header_bga_dodo.xml
+++ b/app/src/main/res/layout/header_bga_dodo.xml
@@ -2,6 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
+              android:background="@mipmap/reflash_bg"
+              android:fitsSystemWindows="true"
               android:gravity="center"
               android:orientation="vertical">
 
@@ -11,6 +13,7 @@
 
         <!-- android:src="@mipmap/refresh_head_arrow" -->
         <ImageView
+
             android:id="@+id/iv_normal_refresh_header_arrow"
             android:layout_width="45dp"
             android:layout_height="45dp"
@@ -33,7 +36,7 @@
         android:layout_marginBottom="15dp"
         android:layout_marginTop="5dp"
         android:text="下拉同步中"
-        android:textColor="#777"
-        android:textSize="12sp"/>
+        android:textColor="@color/white"
+        android:textSize="13sp"/>
 
 </LinearLayout>
