--- a/app/src/main/res/layout/fragment_index.xml
+++ b/app/src/main/res/layout/fragment_index.xml
@@ -10,6 +10,7 @@
 
     <include layout="@layout/search_bar"/>
 
+
     <!--加上scrollable 实现滚动效果-->
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
@@ -21,9 +22,14 @@
         app:tabSelectedTextColor="@color/colorPrimary"
         app:tabTextColor="@color/text_color_66"/>
 
-    <android.support.v4.view.ViewPager
-        android:id="@+id/view_pager"
+    <FrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content">
 
+        <android.support.v4.view.ViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </FrameLayout>
 </LinearLayout>
