使用findbug工具 检查代码

--- a/app/src/main/res/layout/fragment_vip.xml
+++ b/app/src/main/res/layout/fragment_vip.xml
@@ -5,7 +5,7 @@
               android:orientation="vertical">
 
 
-    <include layout="@layout/common_bar"/>
+    <include layout="@layout/head_vip"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/vip_recycler_view"
