--- a/app/src/main/res/layout/channel_recycler_view.xml
+++ b/app/src/main/res/layout/channel_recycler_view.xml
@@ -5,7 +5,9 @@
               android:orientation="vertical">
 
 
+
     <android.support.v7.widget.RecyclerView
+        android:layout_marginTop="4dp"
         android:id="@+id/channel_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
