--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -7,6 +7,13 @@
         <attr name="Title" format="string"/>
     </declare-styleable>
 
+    <!-- 圆形头像控件-->
+    <declare-styleable name="CircleImageView">
+        <attr name="border_width" format="dimension"/>
+        <attr name="border_color2" format="color"/>
+    </declare-styleable>
+
+
     <!--角标控件需要的资源-->
     <declare-styleable name="CornerLabelView">
         <attr name="clvPaddingTop" format="dimension"/>
