使用findbug工具 检查代码

--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -8,6 +8,7 @@
     <include layout="@layout/search_bar"/>
 
     <LinearLayout
+        android:id="@+id/ly_show"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
