--- a/app/src/main/res/layout/fragment_vip.xml
+++ b/app/src/main/res/layout/fragment_vip.xml
@@ -7,10 +7,18 @@
 
     <include layout="@layout/head_vip"/>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/vip_recycler_view"
+    <FrameLayout
+        android:id="@+id/frame_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/vip_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+    </FrameLayout>
+
+
 </LinearLayout>
