--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,4 +14,7 @@
 
     <color name="text_color_66">#666666</color>
     <color name="transparent">#0000</color>
+    <color name="subscribe_category_bar_bg_night">#cc363636</color>
+    <color name="news_tag_border_blue">#3091D8</color>
+    <color name="selector_grey">#DDDDDD</color>
 </resources>
