--- a/app/src/main/res/layout/fragment_live.xml
+++ b/app/src/main/res/layout/fragment_live.xml
@@ -27,11 +27,18 @@
             android:layout_height="match_parent"
             android:background="@color/line_color"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_two"
+        <FrameLayout
+            android:id="@+id/frame_layout"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp">
-        </android.support.v7.widget.RecyclerView>
+            android:layout_height="match_parent">
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_two"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp">
+            </android.support.v7.widget.RecyclerView>
+        </FrameLayout>
     </LinearLayout>
 </LinearLayout>
