--- a/app/src/main/res/layout/fragment_upgc.xml
+++ b/app/src/main/res/layout/fragment_upgc.xml
@@ -4,4 +4,20 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
+
+    <include layout="@layout/search_bar"/>
+
+    <FrameLayout
+        android:id="@+id/frame_layout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_mal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+    </FrameLayout>
 </LinearLayout>
