--- a/app/src/main/res/layout/choice_activity.xml
+++ b/app/src/main/res/layout/choice_activity.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                android:layout_width="match_parent"
+                android:background="@color/background"
+                android:layout_height="match_parent">
 
 
-    <include layout="@layout/common_bar"/>
+    <include
+        android:id="@+id/id_common_bar"
+        layout="@layout/common_bar"/>
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_choice"
+        android:id="@+id/activity_choice_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_below="@id/id_common_bar">
     </android.support.v7.widget.RecyclerView>
-</LinearLayout>
+
+    <RelativeLayout
+        android:id="@+id/choice_condition"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/id_common_bar"
+        android:visibility="gone">
+
+        <include layout="@layout/choice_condition"/>
+    </RelativeLayout>
+</RelativeLayout>
