--- a/app/src/main/res/layout/item_bbs.xml
+++ b/app/src/main/res/layout/item_bbs.xml
@@ -8,7 +8,7 @@
 
     <TextView
         android:id="@+id/tv_bbs"
-        android:layout_width="60dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ellipsize="middle"
         android:maxLines="1"
