--- a/app/src/main/res/layout/fragment_w_movie.xml
+++ b/app/src/main/res/layout/fragment_w_movie.xml
@@ -5,18 +5,17 @@
               android:layout_height="match_parent"
               android:orientation="vertical">
 
-
-    <cn.bingoogolapple.refreshlayout.BGARefreshLayout
-        android:id="@+id/define_bga_refresh_with_load"
+    <com.liaoinstan.springview.widget.SpringView
+        android:id="@+id/my_springView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/wei_movie_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_height="wrap_content"
             android:scrollbars="none"
             tools:listitem="@layout/item_tv_movie"/>
-    </cn.bingoogolapple.refreshlayout.BGARefreshLayout>
+    </com.liaoinstan.springview.widget.SpringView>
 </LinearLayout>
