解决内存泄漏的问题

--- a/app/src/main/res/layout/item_common.xml
+++ b/app/src/main/res/layout/item_common.xml
@@ -40,7 +40,7 @@
             android:layout_alignParentRight="true"
             android:drawablePadding="5dp"
             android:gravity="center"
-            android:text="更多"
+            android:text="更多 >"
             android:textColor="#A9A9A9"
             android:textSize="15dp"/>
     </RelativeLayout>
