--- a/app/src/main/res/layout/fragment_choice.xml
+++ b/app/src/main/res/layout/fragment_choice.xml
@@ -4,11 +4,18 @@
                 android:layout_height="match_parent">
 
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recycler_choice"
+    <com.liaoinstan.springview.widget.SpringView
+        android:id="@+id/choice_spring_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.RecyclerView>
+
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recycler_choice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.RecyclerView>
+    </com.liaoinstan.springview.widget.SpringView>
 
     <ImageView
         android:id="@+id/img_click_me"
