--- a/app/src/main/res/layout/fragment_upgc.xml
+++ b/app/src/main/res/layout/fragment_upgc.xml
@@ -12,12 +12,18 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recycler_mal"
+        <com.liaoinstan.springview.widget.SpringView
+            android:id="@+id/upgc_spring_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        </android.support.v7.widget.RecyclerView>
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recycler_mal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+            </android.support.v7.widget.RecyclerView>
+        </com.liaoinstan.springview.widget.SpringView>
     </FrameLayout>
 </LinearLayout>
