--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
+              android:background="@color/bg_color"
               android:orientation="vertical">
 
     <include layout="@layout/common_bar"/>
@@ -14,9 +15,14 @@
         android:background="@drawable/shape_progressbar_bg"
         />
 
-    <WebView
-        android:id="@+id/wv_content"
+    <com.liaoinstan.springview.widget.SpringView
+        android:id="@+id/web_view_spring_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></WebView>
+        android:layout_height="match_parent">
 
+        <WebView
+            android:id="@+id/wv_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </com.liaoinstan.springview.widget.SpringView>
 </LinearLayout>
