增加Mob 第三方登陆注册的功能

--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -1,7 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scrollbars="none">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_content"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:id="@+id/id_my_msg_layout"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:background="@mipmap/profile_bg"
+            android:gravity="center"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/id_avatar_img"
+                android:layout_width="68dp"
+                android:layout_height="68dp"
+                android:layout_marginRight="14dp"
+                android:src="@mipmap/ic_default_gray_avatar"
+                android:transitionName="transition_01"/>
+
+            <TextView
+                android:id="@+id/id_tel_tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/white"
+                android:textSize="22sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/id_mall_tv"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/white_gray_drawable"
+                android:drawableTop="@mipmap/ic_mall"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="商城"
+                android:textColor="@color/font_dark_gray"
+                android:textSize="14sp"/>
+
+            <TextView
+                android:id="@+id/id_local_tv"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:background="@drawable/white_gray_drawable"
+                android:drawableTop="@mipmap/ic_local"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="观看记录"
+                android:textColor="@color/font_dark_gray"
+                android:textSize="14sp"/>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/id_push_tv"
+            style="@style/Mine_Item_Style"
+            android:layout_marginBottom="1dp"
+            android:drawableLeft="@mipmap/ic_push"
+            android:drawableRight="@mipmap/ic_slide_on"
+            android:text="消息推送"/>
+
+
+        <TextView
+            android:id="@+id/id_update_tv"
+            style="@style/Mine_Item_Style"
+            android:layout_marginBottom="1dp"
+            android:drawableLeft="@mipmap/ic_update"
+            android:drawableRight="@mipmap/arrow_right"
+            android:text="检查更新"/>
+
+        <TextView
+            android:id="@+id/id_share_tv"
+            style="@style/Mine_Item_Style"
+            android:layout_marginBottom="1dp"
+            android:drawableLeft="@mipmap/ic_share"
+            android:drawableRight="@mipmap/arrow_right"
+            android:text="分享"/>
+
+        <TextView
+            android:id="@+id/id_help_tv"
+            style="@style/Mine_Item_Style"
+            android:layout_marginBottom="1dp"
+            android:drawableLeft="@mipmap/ic_help"
+            android:drawableRight="@mipmap/arrow_right"
+            android:text="帮助"/>
+
+        <TextView
+            android:id="@+id/id_about_tv"
+            style="@style/Mine_Item_Style"
+            android:drawableLeft="@mipmap/ic_about"
+            android:drawableRight="@mipmap/arrow_right"
+            android:text="关于"/>
+
+    </LinearLayout>
+</ScrollView>
