增加新功能 添加浏览历史记录

--- a/app/src/main/res/layout/activity_watch_history.xml
+++ b/app/src/main/res/layout/activity_watch_history.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/background"
-                android:orientation="vertical">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/background"
+              android:orientation="vertical">
 
 
     <include
-        android:id="@+id/watch_history_title"
         layout="@layout/common_bar"/>
 
     <com.liaoinstan.springview.widget.SpringView
         android:id="@+id/watch_history_sping_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/watch_history_title">
-
+        android:layout_height="0dp"
+        android:layout_weight="1">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/watch_history_recycler_view"
@@ -25,14 +23,14 @@
 
     </com.liaoinstan.springview.widget.SpringView>
 
+
     <RelativeLayout
+        android:onClick="ClickDelete"
         android:id="@+id/watch_history_re"
         android:layout_width="match_parent"
         android:layout_height="52dp"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/white_gray_drawable"
         android:visibility="gone">
-
 
         <TextView
             android:id="@+id/watch_history_delete"
@@ -51,6 +49,7 @@
             android:layout_toRightOf="@id/watch_history_delete"
             android:text="(3)"
             android:textColor="@color/colorPrimary"
-            android:textSize="18sp"/>
+            android:textSize="18sp"
+            android:visibility="gone"/>
     </RelativeLayout>
-</RelativeLayout>
+</LinearLayout>
