--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,13 +8,16 @@
     <color name="bg_color">#f0eff4</color>
     <color name="gray0">#808080</color>
     <color name="line_color">#d0d0d0</color>
+    <color name="gray1">#E8E7E4</color>
     <color name="gray2">#919191</color>
     <color name="font_dark_gray">#333333</color>
     <color name="gray_transparent">#7000</color>
     <color name="text_color_66">#666666</color>
-    <color name="transparent">#0000</color>
+    <color name="transparent">#00000000</color>
     <color name="subscribe_category_bar_bg_night">#cc363636</color>
     <color name="news_tag_border_blue">#3091D8</color>
     <color name="selector_grey">#DDDDDD</color>
     <color name="background">#F0EFF3</color>
+    <color name="blue_5">#3EB4F5</color>
+
 </resources>
